# rallybox-sd-wifi

./: .gitignore  CMakeLists.txt  README.md  _head_ui_logic_head.txt  partitions.csv  sdkconfig  sdkconfig.baseline  sdkconfig.baseline.defaults  sdkconfig.ci.esp32c6_xtal26m  sdkconfig.defaults  sdkconfig.old  sdkconfig_10  sdkconfig_7  update_c6_firmware_over_usbc_p4.md
components/bsp_extra/: CMakeLists.txt  idf_component.yml
components/esp32_p4_wifi6_touch_lcd_x/: CMakeLists.txt  esp32_p4_wifi6_touch_lcd_x.c
components/esp32_p4_wifi6_touch_lcd_x/include/bsp/: display.h
components/ui/: CMakeLists.txt  README.md  UI_DOCUMENTATION.md  actions.h  fonts.h  images.c  images.h  screens.c  screens.h  styles.h  ui.c  ui.h
docs/: AWS_LAMBDA_GPX_SIGNER.md  GPX_PRESIGNED_UPLOADS.md  OTA_POSTMORTEM.md  RALLYBOX_POC.md  SD_CARD_CONTROL.md
docs/c6_update_kit/: CHECKLIST.md  host_performs_slave_ota.sdkconfig.snapshot  network_adapter_packet_mode.sha256.txt
main/: CMakeLists.txt  GPS_points.c  GPS_points.h  Kconfig.projbuild  debug_flags.h  display_brightness.c  display_brightness.h  gnss.c  gnss.h  idf_component.yml  main.c  racebox.c  racebox.h  sd_card.c  sd_card.h  system_monitor.c  system_monitor.h  ui_logic.c
